--- a/client/src/Login/Login.css
+++ b/client/src/Login/Login.css
@@ -14,10 +14,10 @@
   padding: 40px;
 }
 
-.input_element{
-   display: flex;
-   flex-direction: row;
-   align-items: center;
+.input_element {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .login_form input {
@@ -48,36 +48,41 @@
 }
 
 .message_container {
-   display: flex;
-   flex-direction: column;
-   width: 300px;
-   align-items: center;
-   justify-content: center;
-   text-align: center;
-   margin: 20px auto;
- }
- 
- .message {
-   width: 100%;
-   font-size: 1.1rem;
-   background-color: bisque;
-   padding: 7px;
-   border-radius: 6px;
-   margin: 8px 0;
-   position: relative;
- }
- 
- .close {
-   position: absolute;
-   top: 0;
-   right: 0;
-   font-size: medium;
-   cursor: pointer;
- }
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin: 20px auto;
+}
+
+.message {
+  width: 100%;
+  font-size: 1.1rem;
+  background-color: bisque;
+  padding: 7px;
+  border-radius: 6px;
+  margin: 8px 0;
+  position: relative;
+}
+
+.close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: medium;
+  cursor: pointer;
+}
 
 @media screen and (max-width: 500px) {
   .login_form {
     width: 80vw;
     padding: 20px;
   }
+}
+
+.registerlink {
+  padding: 10px;
+  text-align: center;
 }
