Forgot Password Page added

--- a/client/src/Login/Login.css
+++ b/client/src/Login/Login.css
@@ -82,7 +82,9 @@
   }
 }
 
-.registerlink {
+.links{
+  display: flex;
+  justify-content:space-between;
   padding: 10px;
-  text-align: center;
 }
+
