--- a/client/src/Components/ScrollButton/ScrollButton.css
+++ b/client/src/Components/ScrollButton/ScrollButton.css
@@ -8,11 +8,10 @@
 .scrollButton {
     width: 50px;
     height: 50px;
-    font-size: 11px;
-    letter-spacing: 2.5px;
+    font-size: 25px;
     font-weight: 500;
-    color: #000;
-    background-color: #add8e6;
+    color: white;
+    background-color: #157fa2;
     border: none;
     border-radius: 50%;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
@@ -21,7 +20,6 @@
 }
   
 .scrollButton:hover {
-    background-color: #fff;
     box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
     transform: translateY(-5px);
 }
