navbar color changed

--- a/client/src/ForgotPasswordPage/ForgotPassword.css
+++ b/client/src/ForgotPasswordPage/ForgotPassword.css
@@ -1,8 +1,8 @@
-.login_heading {
+.forgotPassword_heading {
   margin: 1rem auto;
 }
 
-.login_form {
+.forgotPassword_form {
   width: 400px;
   display: flex;
   flex-direction: column;
@@ -20,7 +20,7 @@
   align-items: center;
 }
 
-.login_form input {
+.forgotPassword_form input {
   font-size: 1.2rem;
   width: 100%;
   margin: 10px;
@@ -31,7 +31,7 @@
   background-color: white;
 }
 
-.login_form > button {
+.forgotPassword_form > button {
   padding: 12px 0px;
   margin-top: 10px;
   border: none;
@@ -43,7 +43,7 @@
   cursor: pointer;
 }
 
-.login_form > button:hover {
+.forgotPassword_form > button:hover {
   transform: scale(1.02);
 }
 
@@ -76,14 +76,9 @@
 }
 
 @media screen and (max-width: 500px) {
-  .login_form {
+  .forgotPassword_form {
     width: 80vw;
     padding: 20px;
   }
 }
 
-.links {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
-}
