--- a/client/src/HomePage/Navbar/Fancy.css
+++ b/client/src/HomePage/Navbar/Fancy.css
@@ -5,7 +5,7 @@
 .fancyBg{
     width: 100%;
     height:40px;
-    background: linear-gradient(92.21deg, #195EE7 0%, #F93F78 99.48%);
+    background: #7AD7F0;
     text-align: center;
     position: fixed;
     position: fixed;
@@ -13,9 +13,13 @@
     z-index: 10;
 }
 #fancyText{
-    color: white;
+    color: black;
     margin:0.6%;
     transition: font-size 2s;
+}
+#fancyText:hover{
+    color: white;
+
 }
 @media screen and (max-width: 600px) {
     #fancyText{
