--- a/client/src/Login/Login.css
+++ b/client/src/Login/Login.css
@@ -6,8 +6,8 @@
   width: 400px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  margin: 15vh auto 2vh;
+  justify-content: center;
+  margin:auto ;
   box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1),
     0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
   border-radius: 7px;
