--- a/client/src/MyProfile/MyProfile.css
+++ b/client/src/MyProfile/MyProfile.css
@@ -16,7 +16,7 @@
       margin-top: 2rem;
       margin-bottom: 2rem;
   }
-  img{
+  .imgProfile{
     width: 150px;
     height: 150px;
     margin-bottom: 1rem;
@@ -70,7 +70,6 @@
   }
   .btn-container {
     min-width: 300px;
-    max-width: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
